After successfully creating a workflow, check if the model exists. If not, create it, give it changelevel STRUCTURAL and lock the model